# dianyaapi-jni

./: .gitignore  Cargo.toml  README.md  settings.gradle.kts
.github/workflows/: release.yml
android/: build.gradle.kts
example/: README.md
example/app/: build.gradle.kts
example/app/src/androidTest/java/com/dianyaapi/example/: ExampleInstrumentedTest.java  TranscribeApiInstrumentedTest.java
example/app/src/main/: AndroidManifest.xml
example/app/src/main/java/com/dianyaapi/example/: FirstFragment.java  MainActivity.java  SecondFragment.java  TranscribeStreamManager.java
example/app/src/main/res/layout/: fragment_first.xml
example/app/src/main/res/menu/: menu_main.xml
example/app/src/main/res/navigation/: nav_graph.xml
example/app/src/main/res/values/: strings.xml  themes.xml
example/app/src/main/res/values-night/: themes.xml
example/app/src/main/res/values-v23/: themes.xml
example/app/src/test/java/com/dianyaapi/example/: ExampleUnitTest.java
example/gradle/: libs.versions.toml
example/gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle.kts
java/src/main/java/com/dianya/api/: DianyaException.java  DianyaRuntime.java  ExportFormat.java  ExportType.java  Language.java  ModelType.java  TranscribeApi.java  TranscribeStream.java  TranscribeTaskType.java  TranslateTaskType.java  Utils.java
scripts/: build_sdk.sh
src/: error.rs  lib.rs  runtime.rs  transcribe_stream.rs  transcribe_wrapper.rs  utils.rs
