[package]
name = "dianyaapi-jni"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { git = "https://github.com/MuCapital-BJ/dianyaapi_sdk.git", package = "common" }
transcribe = { git = "https://github.com/MuCapital-BJ/dianyaapi_sdk.git", package = "transcribe" }

jni = "0.21"
once_cell = { version = "1.21" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
tungstenite = { version = "0.28" }
